--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col">
                   <div class="card mb-4 rounded-3 shadow-sm border-primary">
-                    <div class="card-header py-3 text-bg-primary border-primary">
+                    <div class="card-header py-3">
                       <h4 class="my-0 fw-normal">TinDog Project</h4>
                     </div>
                     <div class="card-body">
